--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,41 @@ models/model_nuclei/iter_0_auc_sum_1.71.index
 models/model_nuclei/iter_0_auc_sum_1.71.data-00000-of-00001
 models/model_nuclei/checkpoint
 models/model_epistroma/iter_29500_auc_sum_1.87.meta
+models/model_epistroma/__pycache__/utils.cpython-37.pyc
+models/model_epistroma/main_PredviaTrainGenerator_iteratingbyTile.py
+models/model_epistroma/main_PredviaTrainGenerator_iteratingbyTile_v7.2.py
+models/model_epistroma/main_PredviaTrainGenerator_PNG.py
+models/model_epistroma/main_PredviaTrainGenerator_TIF.py
+models/model_epistroma/model/checkpoint
+models/model_epistroma/model/iter_29500_auc_sum_1.87.data-00000-of-00001
+models/model_epistroma/model/iter_29500_auc_sum_1.87.index
+models/model_epistroma/model/iter_29500_auc_sum_1.87.meta
+models/model_epistroma/python
+models/model_epistroma/requirements.txt
+models/model_epistroma/utils.py
+models/model_nuclei/__pycache__/utils.cpython-35.pyc
+models/model_nuclei/__pycache__/utils.cpython-36.pyc
+models/model_nuclei/__pycache__/utils.cpython-37.pyc
+models/model_nuclei/data/test.png
+models/model_nuclei/main_PredviaTrainGenerator.py
+models/model_nuclei/main_PredviaTrainGenerator_iteratingbyTile.py
+models/model_nuclei/main_PredviaTrainGenerator_iteratingbyTile_CTfiles.py
+models/model_nuclei/main_PredviaTrainGenerator_iteratingbyTile_tmp.py
+models/model_nuclei/main_PredviaTrainGenerator_iteratingbyTile_v7.2.py
+models/model_nuclei/main_PredviaTrainGenerator_PNG.py
+models/model_nuclei/main_PredviaTrainGenerator_saveAsMatOld.py
+models/model_nuclei/main_PredviaTrainGenerator_TIF.py
+models/model_nuclei/model/checkpoint
+models/model_nuclei/model/iter_0_auc_sum_1.71.data-00000-of-00001
+models/model_nuclei/model/iter_0_auc_sum_1.71.index
+models/model_nuclei/model/iter_0_auc_sum_1.71.meta
+models/model_nuclei/model/iter_40000_auc_sum_1.77.data-00000-of-00001
+models/model_nuclei/model/iter_40000_auc_sum_1.77.index
+models/model_nuclei/model/iter_40000_auc_sum_1.77.meta
+models/model_nuclei/nucleiseg_main.ipynb
+models/model_nuclei/requirements.txt
+models/model_nuclei/requirements2.txt
+models/model_nuclei/results/nuclei.png
+models/model_nuclei/results/test_nuclei.png
+models/model_nuclei/utils.py
+models/model_nuclei/utils_tmp.py
