--- a/environment.yml
+++ b/environment.yml
@@ -12,4 +12,11 @@ dependencies:
   - scikit-image
   - spyder-kernels=2.3
   - pandas
-prefix: /home/maberyick/anaconda3/envs/histoTIL
+  -pip:
+   - dill==0.3.3
+   - openslide-python==1.1.2
+   - importlib-resources
+   - openslide-python==1.1.2
+   - scikit-learn==0.24.1
+   - scikit-image==0.18.1
+   - install scipy==1.6.1
