--- a/environment.yml
+++ b/environment.yml
@@ -268,7 +268,7 @@ dependencies:
       - rsa==4.9
       - scikit-image==0.18.1
       - scikit-learn==0.24.1
-      - scipy==1.6.1
+      - scipy
       - six==1.15.0
       - spyder-kernels==2.4.2
       - stack-data==0.6.2
@@ -276,8 +276,8 @@ dependencies:
       - tensorboard-data-server==0.6.1
       - tensorboard-plugin-wit==1.8.1
       - tensorflow==2.2.0
-      - tensorflow-estimator==2.4.0
-      - tensorflow-io-gcs-filesystem==0.30.0
+      - tensorflow-estimator
+      - tensorflow-io-gcs-filesystem
       - termcolor==1.1.0
       - threadpoolctl==3.1.0
       - typing-extensions==3.7.4.3
